bgc-dsl/bgcLSPServer/gen/java/BgcDsl/BgcDslParser.java
// Generated from BgcDsl.g4 by ANTLR 4.13.0
package BgcDsl;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class BgcDslParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, NUMBER=40, CUSTOM_STRING=41, UNIT_STRING=42, INT=43, ID=44, 
		NUM=45, WS=46, COMMENT=47;
	public static final int
		RULE_bgcModel = 0, RULE_substanceDeclaration = 1, RULE_parameterDeclaration = 2, 
		RULE_environmentVariableDeclaration = 3, RULE_primitiveTypes = 4, RULE_compartment = 5, 
		RULE_substanceState = 6, RULE_updateState = 7, RULE_connection = 8, RULE_substanceExpression = 9, 
		RULE_calculation = 10, RULE_basicCalculation = 11, RULE_alternativeCalculation = 12, 
		RULE_caseCalculation = 13, RULE_unit = 14, RULE_unitElement = 15, RULE_groupUnit = 16, 
		RULE_prefixUnit = 17, RULE_arithmeticExpression = 18, RULE_eAdditionOperator = 19, 
		RULE_multiplicationExpression = 20, RULE_eMultiplicationOperator = 21, 
		RULE_powerExpression = 22, RULE_valueExpression = 23, RULE_arrayExpression = 24, 
		RULE_functionCallingExpression = 25, RULE_function = 26, RULE_literalExpression = 27, 
		RULE_literal = 28, RULE_numberLiteral = 29, RULE_stringLiteral = 30, RULE_parenthesisExpression = 31, 
		RULE_termReference = 32, RULE_subterm = 33, RULE_qualifiedName = 34;
	private static String[] makeRuleNames() {
		return new String[] {
			"bgcModel", "substanceDeclaration", "parameterDeclaration", "environmentVariableDeclaration", 
			"primitiveTypes", "compartment", "substanceState", "updateState", "connection", 
			"substanceExpression", "calculation", "basicCalculation", "alternativeCalculation", 
			"caseCalculation", "unit", "unitElement", "groupUnit", "prefixUnit", 
			"arithmeticExpression", "eAdditionOperator", "multiplicationExpression", 
			"eMultiplicationOperator", "powerExpression", "valueExpression", "arrayExpression", 
			"functionCallingExpression", "function", "literalExpression", "literal", 
			"numberLiteral", "stringLiteral", "parenthesisExpression", "termReference", 
			"subterm", "qualifiedName"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'model'", "'substances'", "'parameters'", "'diagnostics'", "'='", 
			"'int'", "'float'", "'double'", "'string'", "'abstract'", "'compartment'", 
			"'extends'", "'{'", "'states'", "'}'", "'update'", "'connection'", "'('", 
			"','", "')'", "'to'", "'calc'", "'alternatives'", "':'", "'case'", "'::'", 
			"'^'", "'+'", "'-'", "'*'", "'/'", "'%'", "'['", "']'", "'exp'", "'inverse'", 
			"'max'", "'>'", "'.'", null, null, null, "'this one has been deactivated'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "NUMBER", "CUSTOM_STRING", "UNIT_STRING", "INT", 
			"ID", "NUM", "WS", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "BgcDsl.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BgcDslParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BgcModelContext extends ParserRuleContext {
		public Token name;
		public SubstanceDeclarationContext substanceDeclaration;
		public List<SubstanceDeclarationContext> substanceDeclarations = new ArrayList<SubstanceDeclarationContext>();
		public ParameterDeclarationContext parameterDeclaration;
		public List<ParameterDeclarationContext> parameterDeclarations = new ArrayList<ParameterDeclarationContext>();
		public EnvironmentVariableDeclarationContext environmentVariableDeclaration;
		public List<EnvironmentVariableDeclarationContext> environments = new ArrayList<EnvironmentVariableDeclarationContext>();
		public CompartmentContext compartment;
		public List<CompartmentContext> compartments = new ArrayList<CompartmentContext>();
		public ConnectionContext connection;
		public List<ConnectionContext> connections = new ArrayList<ConnectionContext>();
		public TerminalNode ID() { return getToken(BgcDslParser.ID, 0); }
		public List<SubstanceDeclarationContext> substanceDeclaration() {
			return getRuleContexts(SubstanceDeclarationContext.class);
		}
		public SubstanceDeclarationContext substanceDeclaration(int i) {
			return getRuleContext(SubstanceDeclarationContext.class,i);
		}
		public List<CompartmentContext> compartment() {
			return getRuleContexts(CompartmentContext.class);
		}
		public CompartmentContext compartment(int i) {
			return getRuleContext(CompartmentContext.class,i);
		}
		public List<ConnectionContext> connection() {
			return getRuleContexts(ConnectionContext.class);
		}
		public ConnectionContext connection(int i) {
			return getRuleContext(ConnectionContext.class,i);
		}
		public List<ParameterDeclarationContext> parameterDeclaration() {
			return getRuleContexts(ParameterDeclarationContext.class);
		}
		public ParameterDeclarationContext parameterDeclaration(int i) {
			return getRuleContext(ParameterDeclarationContext.class,i);
		}
		public List<EnvironmentVariableDeclarationContext> environmentVariableDeclaration() {
			return getRuleContexts(EnvironmentVariableDeclarationContext.class);
		}
		public EnvironmentVariableDeclarationContext environmentVariableDeclaration(int i) {
			return getRuleContext(EnvironmentVariableDeclarationContext.class,i);
		}
		public BgcModelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bgcModel; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BgcDslListener ) ((BgcDslListener)listener).enterBgcModel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BgcDslListener ) ((BgcDslListener)listener).exitBgcModel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BgcDslVisitor ) return ((BgcDslVisitor<? extends T>)visitor).visitBgcModel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BgcModelContext bgcModel() throws RecognitionException {
		BgcModelContext _localctx = new BgcModelContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_bgcModel);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			match(T__0);
			setState(71);
			((BgcModelContext)_localctx).name = match(ID);
			setState(72);
			match(T__1);
			setState(74); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(73);
				((BgcModelContext)_localctx).substanceDeclaration = substanceDeclaration();
				((BgcModelContext)_localctx).substanceDeclarations.add(((BgcModelContext)_localctx).substanceDeclaration);
				}
				}
				setState(76); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 960L) != 0) );
			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(78);
				match(T__2);
				setState(82);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 960L) != 0)) {
					{
					{
					setState(79);
					((BgcModelContext)_localctx).parameterDeclaration = parameterDeclaration();
					((BgcModelContext)_localctx).parameterDeclarations.add(((BgcModelContext)_localctx).parameterDeclaration);
					}
					}
					setState(84);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__3) {
				{
				setState(87);
				match(T__3);
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 960L) != 0)) {
					{
					{
					setState(88);
					((BgcModelContext)_localctx).environmentVariableDeclaration = environmentVariableDeclaration();
					((BgcModelContext)_localctx).environments.add(((BgcModelContext)_localctx).environmentVariableDeclaration);
					}
					}
					setState(93);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(98); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(98);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__9:
				case T__10:
					{
					setState(96);
					((BgcModelContext)_localctx).compartment = compartment();
					((BgcModelContext)_localctx).compartments.add(((BgcModelContext)_localctx).compartment);
					}
					break;
				case T__16:
					{
					setState(97);
					((BgcModelContext)_localctx).connection = connection();
					((BgcModelContext)_localctx).connections.add(((BgcModelContext)_localctx).connection);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(100); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 134144L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SubstanceDeclarationContext extends ParserRuleContext {
		public PrimitiveTypesContext type;
		public Token name;
		public UnitContext unit() {
			return getRuleContext(UnitContext.class,0);
		}
		public PrimitiveTypesContext primitiveTypes() {
			return getRuleContext(PrimitiveTypesContext.class,0);
		}
		public TerminalNode ID() { return getToken(BgcDslParser.ID, 0); }
		public SubstanceDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_substanceDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BgcDslListener ) ((BgcDslListener)listener).enterSubstanceDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BgcDslListener ) ((BgcDslListener)listener).exitSubstanceDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BgcDslVisitor ) return ((BgcDslVisitor<? extends T>)visitor).visitSubstanceDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SubstanceDeclarationContext substanceDeclaration() throws RecognitionException {
		SubstanceDeclarationContext _localctx = new SubstanceDeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_substanceDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			((SubstanceDeclarationContext)_localctx).type = primitiveTypes();
			setState(103);
			((SubstanceDeclarationContext)_localctx).name = match(ID);
			setState(104);
			unit();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParameterDeclarationContext extends ParserRuleContext {
		public PrimitiveTypesContext type;
		public Token name;
		public ArithmeticExpressionContext expression;
		public UnitContext unit() {
			return getRuleContext(UnitContext.class,0);
		}
		public PrimitiveTypesContext primitiveTypes() {
			return getRuleContext(PrimitiveTypesContext.class,0);
		}
		public TerminalNode ID() { return getToken(BgcDslParser.ID, 0); }
		public ArithmeticExpressionContext arithmeticExpression() {
			return getRuleContext(ArithmeticExpressionContext.class,0);
		}
		public ParameterDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameterDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BgcDslListener ) ((BgcDslListener)listener).enterParameterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BgcDslListener ) ((BgcDslListener)listener).exitParameterDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BgcDslVisitor ) return ((BgcDslVisitor<? extends T>)visitor).visitParameterDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParameterDeclarationContext parameterDeclaration() throws RecognitionException {
		ParameterDeclarationContext _localctx = new ParameterDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_parameterDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			((ParameterDeclarationContext)_localctx).type = primitiveTypes();
			setState(107);
			((ParameterDeclarationContext)_localctx).name = match(ID);
			setState(108);
			unit();
			setState(109);
			match(T__4);
			setState(110);
			((ParameterDeclarationContext)_localctx).expression = arithmeticExpression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EnvironmentVariableDeclarationContext extends ParserRuleContext {
		public PrimitiveTypesContext type;
		public Token name;
		public ArithmeticExpressionContext expression;
		public UnitContext unit() {
			return getRuleContext(UnitContext.class,0);
		}
		public PrimitiveTypesContext primitiveTypes() {
			return getRuleContext(PrimitiveTypesContext.class,0);
		}
		public TerminalNode ID() { return getToken(BgcDslParser.ID, 0); }
		public ArithmeticExpressionContext arithmeticExpression() {
			return getRuleContext(ArithmeticExpressionContext.class,0);
		}
		public EnvironmentVariableDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_environmentVariableDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BgcDslListener ) ((BgcDslListener)listener).enterEnvironmentVariableDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BgcDslListener ) ((BgcDslListener)listener).exitEnvironmentVariableDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BgcDslVisitor ) return ((BgcDslVisitor<? extends T>)visitor).visitEnvironmentVariableDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EnvironmentVariableDeclarationContext environmentVariableDeclaration() throws RecognitionException {
		EnvironmentVariableDeclarationContext _localctx = new EnvironmentVariableDeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_environmentVariableDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			((EnvironmentVariableDeclarationContext)_localctx).type = primitiveTypes();
			setState(113);
			((EnvironmentVariableDeclarationContext)_localctx).name = match(ID);
			setState(114);
			unit();
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__4) {
				{
				setState(115);
				match(T__4);
				setState(116);
				((EnvironmentVariableDeclarationContext)_localctx).expression = arithmeticExpression();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PrimitiveTypesContext extends ParserRuleContext {
		public PrimitiveTypesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primitiveTypes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BgcDslListener ) ((BgcDslListener)listener).enterPrimitiveTypes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BgcDslListener ) ((BgcDslListener)listener).exitPrimitiveTypes(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BgcDslVisitor ) return ((BgcDslVisitor<? extends T>)visitor).visitPrimitiveTypes(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrimitiveTypesContext primitiveTypes() throws RecognitionException {
		PrimitiveTypesContext _localctx = new PrimitiveTypesContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_primitiveTypes);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 960L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CompartmentContext extends ParserRuleContext {
		public Token name;
		public Token parent;
		public SubstanceStateContext substanceState;
		public List<SubstanceStateContext> states = new ArrayList<SubstanceStateContext>();
		public ParameterDeclarationContext parameterDeclaration;
		public List<ParameterDeclarationContext> constants = new ArrayList<ParameterDeclarationContext>();
		public EnvironmentVariableDeclarationContext environmentVariableDeclaration;
		public List<EnvironmentVariableDeclarationContext> evnironments = new ArrayList<EnvironmentVariableDeclarationContext>();
		public CalculationContext calculation;
		public List<CalculationContext> calculations = new ArrayList<CalculationContext>();
		public UpdateStateContext updateState;
		public List<UpdateStateContext> updateStates = new ArrayList<UpdateStateContext>();
		public List<TerminalNode> ID() { return getTokens(BgcDslParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(BgcDslParser.ID, i);
		}
		public List<SubstanceStateContext> substanceState() {
			return getRuleContexts(SubstanceStateContext.class);
		}
		public SubstanceStateContext substanceState(int i) {
			return getRuleContext(SubstanceStateContext.class,i);
		}
		public List<CalculationContext> calculation() {
			return getRuleContexts(CalculationContext.class);
		}
		public CalculationContext calculation(int i) {
			return getRuleContext(CalculationContext.class,i);
		}
		public List<UpdateStateContext> updateState() {
			return getRuleContexts(UpdateStateContext.class);
		}
		public UpdateStateContext updateState(int i) {
			return getRuleContext(UpdateStateContext.class,i);
		}
		public List<ParameterDeclarationContext> parameterDeclaration() {
			return getRuleContexts(ParameterDeclarationContext.class);
		}
		public ParameterDeclarationContext parameterDeclaration(int i) {
			return getRuleContext(ParameterDeclarationContext.class,i);
		}
		public List<EnvironmentVariableDeclarationContext> environmentVariableDeclaration() {
			return getRuleContexts(EnvironmentVariableDeclarationContext.class);
		}
		public EnvironmentVariableDeclarationContext environmentVariableDeclaration(int i) {
			return getRuleContext(EnvironmentVariableDeclarationContext.class,i);
		}
		public CompartmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compartment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BgcDslListener ) ((BgcDslListener)listener).enterCompartment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BgcDslListener ) ((BgcDslListener)listener).exitCompartment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BgcDslVisitor ) return ((BgcDslVisitor<? extends T>)visitor).visitCompartment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CompartmentContext compartment() throws RecognitionException {
		CompartmentContext _localctx = new CompartmentContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_compartment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__9) {
				{
				setState(121);
				match(T__9);
				}
			}

			setState(124);
			match(T__10);
			setState(125);
			((CompartmentContext)_localctx).name = match(ID);
			setState(128);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__11) {
				{
				setState(126);
				match(T__11);
				setState(127);
				((CompartmentContext)_localctx).parent = match(ID);
				}
			}

			setState(130);
			match(T__12);
			setState(131);
			match(T__13);
			setState(133); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(132);
				((CompartmentContext)_localctx).substanceState = substanceState();
				((CompartmentContext)_localctx).states.add(((CompartmentContext)_localctx).substanceState);
				}
				}
				setState(135); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID );
			setState(144);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(137);
				match(T__2);
				setState(141);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 960L) != 0)) {
					{
					{
					setState(138);
					((CompartmentContext)_localctx).parameterDeclaration = parameterDeclaration();
					((CompartmentContext)_localctx).constants.add(((CompartmentContext)_localctx).parameterDeclaration);
					}
					}
					setState(143);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(153);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__3) {
				{
				setState(146);
				match(T__3);
				setState(150);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 960L) != 0)) {
					{
					{
					setState(147);
					((CompartmentContext)_localctx).environmentVariableDeclaration = environmentVariableDeclaration();
					((CompartmentContext)_localctx).evnironments.add(((CompartmentContext)_localctx).environmentVariableDeclaration);
					}
					}
					setState(152);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}
